adding menu home page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   bonfire: ^2.12.0
   flame_audio: ^1.4.0
+  flame_splash_screen: ^0.1.0
   flutter:
     sdk: flutter
   flutter_localizations:
